net-sf-ucanaccess-fork: Fix deprecation warnings